--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="header">My website Design System</h1>
+<h1>My website Design System</h1>
 <!------------Colors------------>
 <div class="container">
     <h2>Colors used</h2>
